--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="whyblock">
                 <img src="why_abs_pic.PNG">
             <div>
-                <h1 class="Brit">BRIT</h1>
+                <h1 class="else">Blank</h1>
             </div>
         </div>
         <div class="caloriesfood">
