--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
                 <h2 id="timey">TIME:</h2>
                 <h2 id="daytime"></h2>
                 <h2 id="nextmeal">NEXT MEAL:</h2>     
-                <h2 id="nextmealdisplay"></h2>         
+                <h2 id="nextmealdisplay"></h2> 
+                <button type="submit" class="btn" onclick="openPopup()">add</button>
+                <div class="popup" id="popup">
+                    <h2>Done!</h2>
+                    <button type="button" onclick="closePopup()"> OK</button>
+                </div>        
             </div>
             <div class="caloriesleftsofar">
                 <h2 id="caloriessofar">CALORIES SO FAR:</h2>
