adjusted the spacing of meal and time.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h2 id="daytime"></h2>
                 <h2 id="nextmeal">NEXT MEAL:</h2>     
                 <h2 id="nextmealdisplay"></h2>
-                <button type="submit" class="btn" onclick="openPopup()">add</button>
+                <button type="submit" class="btn" onclick="openPopup()">Add Food</button>
                 <div class="popup" id="popup">
                     <input type="text" class="input" name="name" placeholder="Name">
                     <input type="text" class="input" name="weight" placeholder="Weight">
