communication with backend works

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <h2 id="daytime"></h2>
                 <h2 id="nextmeal">NEXT MEAL:</h2>     
                 <h2 id="nextmealdisplay"></h2>
+            </div>        
+            <div class="foodInformation" id="foods">
                 <button type="submit" class="btn" onclick="openPopup()">Add Food</button>
                 <div class="popup" id="popup">
                     <input type="text" class="input" name="name" placeholder="Name">
@@ -32,7 +34,8 @@
                     <input type="text" class="input" name="fats" placeholder="Fats">
                     <input type="text" class="input" name="calories" placeholder="Calories">
                     <button type="button" onclick="closePopup()"> OK</button>
-                </div>        
+                </div>
+            </div>
             </div>
             <div class="caloriesleftsofar">
                 <h2 id="caloriessofar">CALORIES SO FAR:</h2>
