table header created, when no items in db header not displayed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
                 <h2 id="daytime"></h2>
                 <h2 id="nextmeal">NEXT MEAL:</h2>     
                 <h2 id="nextmealdisplay"></h2>
-            </div>        
+            </div>   
+            <table id="tableFoods">
+                <tr>
+                    <th>Name</th>
+                    <th>Weight</th>
+                    <th>Calories</th>
+                    <th>Carbohydrates</th>
+                    <th>Protein</th>
+                    <th>Fats</th>
+                </tr>
+            </table>     
             <div class="foodInformation" id="foods">
                 <button type="submit" class="btn" onclick="openPopup()">Add Food</button>
                 <div class="popup" id="popup">
