table is displayed on the site

--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
                 <h2 id="nextmeal">NEXT MEAL:</h2>     
                 <h2 id="nextmealdisplay"></h2>
             </div>   
-            <table id="tableFoods">
-                <tr>
-                    <th>Name</th>
-                    <th>Weight</th>
-                    <th>Calories</th>
-                    <th>Carbohydrates</th>
-                    <th>Protein</th>
-                    <th>Fats</th>
-                </tr>
+            <table>
+                <tbody id="tableFoods">
+                    <tr>
+                        <th>Name</th>
+                        <th>Weight</th>
+                        <th>Calories</th>
+                        <th>Carbohydrates</th>
+                        <th>Protein</th>
+                        <th>Fats</th>
+                    </tr>
+                </tbody>
             </table>     
             <div class="foodInformation" id="foods">
                 <button type="submit" class="btn" onclick="openPopup()">Add Food</button>
