--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <h2 id="caloriessofar">CALORIES SO FAR:</h2>
                 <h2 id ="caloriesSoFarNumber"></h2>
                 <h2 id="caloriesleft">CALORIES LEFT:</h2>
+                <h2 id ="caloriesLeftNumber"></h2>
             </div>
             <div class="foods">
             </div>
