only numbers can be put into number textboxes

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
             </table>     
             <div class="foodInformation" id="foods">
                 <button type="submit" class="btn" id="btny"onclick="openPopup()">Add Food</button>
-                <div class="popup" id="popup">
+                <form class="popup" id="popup">
                     <input type="text" class="input" name="name" placeholder="Name">
-                    <input type="text" class="input" name="weight" placeholder="Weight">
-                    <input type="text" class="input" name="carbohydrates" placeholder="Carbohydrates">
-                    <input type="text" class="input" name="protein" placeholder="Protein">
-                    <input type="text" class="input" name="fats" placeholder="Fats">
-                    <input type="text" class="input" name="calories" placeholder="Calories">
+                    <input type="number" class="input" name="weight" placeholder="Weight">
+                    <input type="number" class="input" name="carbohydrates" placeholder="Carbohydrates">
+                    <input type="number" class="input" name="protein" placeholder="Protein">
+                    <input type="number" class="input" name="fats" placeholder="Fats">
+                    <input type="number" class="input" name="calories" placeholder="Calories">
                     <button type="button" onclick="closePopup()" id="btnoke"> OK</button>
-                </div>
+                </form>
             </div>
             </div>
             <div class="caloriesleftsofar">
