--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
             <div class="time">
                 <h2 id="dayy">DAY:</h2>
                 <h2 id="weekday"></h2>
-                <h2 id="nextmeal">NEXT MEAL:</h2>     
-                <h2 id="nextmealdisplay"></h2>
+                <h2 id="nextmeal">NEXT MEAL:</h2>  
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <h2 id="nextmealdisplay"></h2>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </div>   
+                
             </div>   
             <div class="tblebtn">
                 <table id="tble">
