--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <form class="mealpopup" id="mealpopup">
                     <h2 id="chooseMealTime">Choose meal time!</h2>
                     <button type="button" class="meal" onclick="chosenMeal('Breakfast')">Breakfast</button>
-                    <button type="button" class="meal" onclick="chosenMeal('Pre-lunch')">Pre-Lunch</button>
+                    <button type="button" class="meal" onclick="chosenMeal('Pre_lunch')">Pre-Lunch</button>
                     <button type="button" class="meal" onclick="chosenMeal('Lunch')">Lunch</button>
-                    <button type="button" class="meal" onclick="chosenMeal('Pre-dinner')">Pre-Dinner</button>
+                    <button type="button" class="meal" onclick="chosenMeal('Pre_dinner')">Pre-Dinner</button>
                     <button type="button" class="meal" onclick="chosenMeal('Dinner')">Dinner</button>
                     <button type="button" class="meal" onclick="chosenMeal('Snack')">Snack</button>
                 </form>
