adding meal to dropdown now

--- a/index.html
+++ b/index.html
@@ -30,11 +30,7 @@
                     <button class="dropbtn">
                         <h2 id="nextmealdisplay"></h2>
                     </button>
-                    <div class="dropdown-content">
-                        <a href="#">Link 1</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
-                    </div>
+                    <div class="dropdown-content" id="mealDropdown"></div>
                 </div>   
                 <button type="submit" id="addmealbtn" onclick="openMealPopup()"><img src="plusSign.png"></button>
             <div class="mealStartInfo">
