--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 </table>
                 <button type="submit" class="btn" id="btny"onclick="openPopup()">Add Food</button>
                 <button type="submit" id="checkmark"><img src="greenCheckMark.png" onclick="constructMealAndSend()"></button>
+                <button type="submit" id="deleteButton"><img src="transparentLetterX.png"></button>
             </div>
             <div class="foodInformation" id="foods">
                 <form class="popup" id="popup">
