delete button is added in frontend

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </form>
             </div>
             </div>   
-            <div class="tblebtn">
+            <div id="tblebtn">
                 <table id="tble">
                     <thead>
                         <tr class="headers">
@@ -67,7 +67,6 @@
                 </table>
                 <button type="submit" class="btn" id="btny"onclick="openPopup()">Add Food</button>
                 <button type="submit" id="checkmark"><img src="greenCheckMark.png" onclick="constructMealAndSend()"></button>
-                <button type="submit" id="deleteButton"><img src="transparentLetterX.png"></button>
             </div>
             <div class="foodInformation" id="foods">
                 <form class="popup" id="popup">
