--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>BARV</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="wholepage">
