--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>BARV</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=(), user-id=()" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1, user-scalable=no">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=(), user-id=() " />
+    
 </head>
 <body>
     <div class="wholepage">
