added edit button, fixed delete button style

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                         <th>Calories</th>
                         <th>Carbohydrates</th>
                         <th>Protein</th>
-                        <th>Fats</th>
+                        <th style="display: flex; flex-direction: row;">Fats 
+                            <div style="position: relative;right: -40px;"><button type="submit" id="editButton" ><img src="editPencil.png"></button></div>
+                        </th>
                     </tr>
                 </thead>
                 <tbody id="tableFoods">
