add functionality where every input needs a value

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <input type="number" class="input" name="protein" placeholder="Protein">
                     <input type="number" class="input" name="fats" placeholder="Fats">
                     <input type="number" class="input" name="calories" placeholder="Calories">
-                    <button type="button" onclick="closeAddFoodPopup(); addFoodToMeal()" id="btnoke"> OK</button>
+                    <button type="button" onclick="requireEveryInput()" id="btnoke"> OK</button>
                 </form>
             </div>
             <div id="mealPopups">
