--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h2 id="nextmeal">NEXT MEAL:</h2>  
             </div>
             <div class="dropdown time">
-                <button class="dropbtn">
+                <button class="dropbtn" id="da">
                     <h2 id="nextmealdisplay"></h2>
                 </button>
                 <div class="dropdown-content" id="mealDropdown"></div>
