--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <script defer src="script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1, user-scalable=no">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=(), user-id=() " />
-    
+    <meta name="frontend repository" content="https://github.com/RainRahni/barv-frontend">
+    <meta name="backend repository" content="https://github.com/RainRahni/barv-backend">
 </head>
 <body>
     <div id="wholepage" class="grid">
