--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link
+              rel="stylesheet"
+              href="//cdn.jsdelivr.net/npm/element-plus/dist/index.css"
+      />
+      <!-- Import Vue 3 -->
+      <script src="//cdn.jsdelivr.net/npm/vue@3"></script>
+      <!-- Import component library -->
+      <script src="//cdn.jsdelivr.net/npm/element-plus"></script>
     <title>BARV</title>
   </head>
   <body>
