--- a/index.html
+++ b/index.html
@@ -1,105 +1,20 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus/dist/index.css"/>
+      <!-- Import Vue 3 -->
+      <script src="//cdn.jsdelivr.net/npm/vue@3"></script>
+      <!-- Import component library -->
+      <script src="//cdn.jsdelivr.net/npm/element-plus"></script>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>BARV</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1, user-scalable=no">
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=(), user-id=() " />
-    <meta name="frontend repository" content="https://github.com/RainRahni/barv-frontend">
-    <meta name="backend repository" content="https://github.com/RainRahni/barv-backend">
-</head>
-
-<body>
-    <div id="wholepage" class="grid">
-        <div class="timeContainer">
-            <div class="time">
-                <h2 id="dayy">DAY:</h2>
-            </div>
-            <div class="time">
-                <h2 id="weekday"></h2>
-            </div>
-            <div class="time">
-                <h2 id="nextmeal">NEXT MEAL:</h2>  
-            </div>
-            <div class="dropdown time">
-                <button class="dropbtn" id="da">
-                    <h2 id="nextmealdisplay"></h2>
-                </button>
-                <div class="dropdown-content" id="mealDropdown"></div>
-                <button type="submit" id="addmealbtn" onclick="openMealPopup()"><img src="plusSign.png"></button>
-            </div> 
-        </div> 
-        <div class="caloriesContainer">
-            <div class="caloriesDisplay">
-                <h2 id="calsSoFarText">CALORIES SO FAR:</h2> 
-            </div>
-            <div class="caloriesDisplay">
-                <h2 id="caloriesleftsofarNumber"></h2>
-            </div>
-            <div class="caloriesDisplay">
-                <h2 id="calsLeftText">CALORIES LEFT:</h2> 
-            </div>
-            <div class="caloriesDisplay">
-                <h2 id="caloriesleftNumber"></h2> 
-            </div>
-        </div>
-        <div id="tblebtn">
-            <table id="tble">
-                <thead>
-                    <tr class="headers">
-                        <th>Name</th>
-                        <th>Weight</th>
-                        <th>Calories</th>
-                        <th>Carbohydrates</th>
-                        <th>Protein</th>
-                        <th style="display: flex; flex-direction: row;">Fats 
-                            <div style="position: relative;right: -40px;">
-                                <button type="submit" id="editPencil" onClick="editMeal()" style="background-color: grey;"><img src="editPencil.png"></button>
-                            </div>
-                        </th>
-                    </tr>
-                </thead>
-                <tbody id="tableFoods">
-                </tbody>
-                <tfoot id="foodFoot">
-                    <tr>
-                        <td style="font-weight: bold;">In total</td>
-                        <td style="font-weight: bold;">--</td>
-                        <td id="calFoot" style="font-weight: bold;"></td>
-                        <td id="carbFoot" style="font-weight: bold;"></td>
-                        <td id="protFoot" style="font-weight: bold;"></td>
-                        <td id="fatsFoot" style="font-weight: bold;"></td>
-                    </tr>
-                </tfoot>
-            </table>
-            <div id="but">
-            </div>
-        </div>
-        <div id="popups">
-            <div id="foodPopup">
-                <form class="popup" id="popup">
-                    <input type="text" class="input" name="name" placeholder="Name">
-                    <input type="number" class="input" name="weightInGrams" placeholder="Weight">
-                    <input type="number" class="input" name="calories" placeholder="Calories">
-                    <input type="number" class="input" name="carbohydrates" placeholder="Carbohydrates">
-                    <input type="number" class="input" name="protein" placeholder="Protein">
-                    <input type="number" class="input" name="fats" placeholder="Fats">
-                    <button type="button" onclick="requireEveryInput()" id="btnoke"> OK</button>
-                </form>
-            </div>
-            <div id="mealPopups">
-                <form class="mealPopup" id="mealPopup">
-                    <h2 id="chooseMealTime">Choose meal time!</h2>
-                    <button type="button" class="meal" onclick="chosenMeal('Breakfast')">Breakfast</button>
-                    <button type="button" class="meal" onclick="chosenMeal('Pre_lunch')">Pre-Lunch</button>
-                    <button type="button" class="meal" onclick="chosenMeal('Lunch')">Lunch</button>
-                    <button type="button" class="meal" onclick="chosenMeal('Pre_dinner')">Pre-Dinner</button>
-                    <button type="button" class="meal" onclick="chosenMeal('Dinner')">Dinner</button>
-                    <button type="button" class="meal" onclick="chosenMeal('Snack')">Snack</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</body>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
