--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+        <div>
+            <script type="module" src="/src/main.js"></script>
+        </div>
   </body>
 </html>
