--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="app"></div>
         <div>
-            <script type="module" src="/src/main.js"></script>
+            <script type="module" src="src/main.js"></script>
         </div>
   </body>
 </html>
